[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/message_window.png" type="Texture" id=1]
[ext_resource path="res://scripts/Message.gd" type="Script" id=2]
[ext_resource path="res://art/button.png" type="Texture" id=3]
[ext_resource path="res://art/button_pressed.png" type="Texture" id=4]

[node name="Message" type="NinePatchRect" groups=[
"message",
]]

pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -100.0
margin_right = 400.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
patch_margin_left = 75
patch_margin_top = 50
patch_margin_right = 75
patch_margin_bottom = 50
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Margin", "Patch Margin", "Pause", "Rect" ]

[node name="Text" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 25.0
margin_right = 750.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Pause", "Rect", "custom_colors" ]

[node name="ButtonRight" type="TextureButton" parent="." index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -75.0
margin_right = -60.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="Text" type="Label" parent="ButtonRight" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -13.0
margin_right = 55.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause" ]

[node name="ButtonCenter" type="TextureButton" parent="." index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -410.0
margin_top = -75.0
margin_right = -260.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="Text" type="Label" parent="ButtonCenter" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -13.0
margin_right = 55.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause" ]

[node name="ButtonLeft" type="TextureButton" parent="." index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -610.0
margin_top = -75.0
margin_right = -460.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="Text" type="Label" parent="ButtonLeft" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -13.0
margin_right = 55.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Pause" ]

[connection signal="button_down" from="ButtonRight" to="." method="_on_ButtonRight_button_down"]

[connection signal="button_up" from="ButtonRight" to="." method="_on_ButtonRight_button_up"]

[connection signal="button_down" from="ButtonCenter" to="." method="_on_ButtonCenter_button_down"]

[connection signal="button_up" from="ButtonCenter" to="." method="_on_ButtonCenter_button_up"]

[connection signal="button_down" from="ButtonLeft" to="." method="_on_ButtonLeft_button_down"]

[connection signal="button_up" from="ButtonLeft" to="." method="_on_ButtonLeft_button_up"]


